--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,11 @@ assistant_id: 20240417-165056-freezing-grenade
 language: en
 
 pipeline:
+  - name: "SpacyNLP"
+    model: "en_core_web_md"
+    case_sensitive: False
   - name: WhitespaceTokenizer
+    case_sensitive: False
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
@@ -20,11 +24,11 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 300
+    epochs: 325
     constrain_similarities: true
   - name: EntitySynonymMapper
   - name: ResponseSelector
-    epochs: 300
+    epochs: 325
     constrain_similarities: true
     retrieval_intent: faq
 
